# breach-vr

./: .gitignore  MAIN_WORKFLOW.yml.txt  README.md  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
.github/workflows/: main.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp  openxr_app.cpp  openxr_app.h
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/values/: strings.xml
